objects/ortoo_qra__Unreviewed_Custom_Object__c.object
<CustomObject>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Group__c</fullName>
        <label>Assigned From Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Queue__c</fullName>
        <label>Assigned From Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__EventSubtype__c</fullName>
        <label>EventSubtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Id__c</fullName>
        <label>Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_assign_Last_Assigned_Date__c</fullName>
        <label>Q_assign_Last_Assigned_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__ShowAs__c</fullName>
        <label>ShowAs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__ownerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ownerName</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Unreviewed_Custom_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Unreviewed_Custom_Object</label>
    <nameField>
        <label>Unreviewed_Custom_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unreviewed Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>